# hikvision-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  ENCRYPTION_ANALYSIS.md  LEIAME.md  Makefile  README.md  README.pt-BR.md  build.rs  canalzero.md  config.example.json  sdkdownload.sh  servicecomponentlocal.md
assets/: hikvision-rs.desktop
docs/: LOGIN.md
src/: api.rs  encrypted_stream.rs  hcnetsdk.rs  hcnetsdk_multi_stream.rs  hcnetsdk_stream.rs  hcnetsdk_x11_multi.rs  i18n.rs  lib.rs  main.rs  netstream.rs  playctrl.rs  playctrl_stream.rs  rtsp.rs  snapshot_stream.rs  x11_embed.rs  x11_window.rs
