[package]
name = "hikvision-rs"
version = "0.2.0"
edition = "2021"
default-run = "hikvision-rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
ureq = "3"
base64 = "0.22"
quick-xml = "0.37"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
md5 = "0.8.0"
ffmpeg-next = "7"

# Optimize dependencies even in debug mode (huge impact on decode speed)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
