[package]
name = "hikvision-rs"
version = "0.2.0"
edition = "2021"
default-run = "hikvision-rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
ureq = "3"
base64 = "0.22"
quick-xml = "0.37"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
md5 = "0.8.0"
ffmpeg-next = "7"
jpeg-decoder = "0.3"

tungstenite = "0.26"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
num-bigint = "0.4"
rand = "0.8"
libloading = "0.8"
libc = "0.2"

# Optimize dependencies even in debug mode (huge impact on decode speed)
[profile.dev.package."*"]
opt-level = 2

[profile.dev]
incremental = false
debug = 0

[profile.release]
opt-level = 3
lto = "thin"
